--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<td id="summa4">&#8512;   0</td>
 		</tr>	    
 		<tr>
-			<td><button onclick="muutaSummaa(0, 20)">+</button> <input type="text" class="summa-kentta" id="luku_r1_s1" oninput="laskeSumma()"> <button onclick="muutaSummaa(0, -20)">-</button></td>
+			<td><button onclick="muutaSummaa(0, 20)">+</button> <input type="text" pattern="[0-9]*" inputmode="numeric" class="summa-kentta" id="luku_r1_s1" oninput="laskeSumma()"> <button onclick="muutaSummaa(0, -20)">-</button></td>
 			<td><img id="kuva1" src="tyhja_kuva.jpg" onclick="vaihdaKuva('kuva1')"></td>
 			<td><b>20</b></td>
 			<td><img id="kuva2" src="tyhja_kuva.jpg" onclick="vaihdaKuva('kuva2')"></td>
