--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
 		}
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N77FDNEC8T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N77FDNEC8T');
+</script>
 <body class="fullscreen">
   <div class="container">
 <img src="monkero1.jpg" alt="Be cool - play Monkero" style="width:200px;height:200px;">
